// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxOffcanvasHeader customize 1`] = `
<div>
  <div
    class="offcanvas-header bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxOffcanvasHeader component 1`] = `
<div>
  <div
    class="offcanvas-header"
  />
</div>
`;
